--- a/builder/Cargo.toml
+++ b/builder/Cargo.toml
@@ -17,3 +17,4 @@ trybuild = { version = "1.0.49", features = ["diff"] }
 
 [dependencies]
 syn = { version = "1.0", features = ["extra-traits"] }
+quote = "1.0"
